src/objects/Credentialing__c.object
<CustomObject>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committee_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Committee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committee_Status__c</fullName>
        <label>Committee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Routine - Interim Committee</fullName>
                </value>
                <value>
                    <fullName>Denied by Committee</fullName>
                </value>
                <value>
                    <fullName>Issue Approved by Committee</fullName>
                </value>
                <value>
                    <fullName>Issue Approved by Mgmt</fullName>
                </value>
                <value>
                    <fullName>Issue Approved by Mgmt - Interim Committee</fullName>
                </value>
                <value>
                    <fullName>Issue to Committee</fullName>
                </value>
                <value>
                    <fullName>Associated Doctor with Issue</fullName>
                </value>
                <value>
                    <fullName>Previous Denial Resubmission</fullName>
                </value>
                <value>
                    <fullName>Recommend Denial</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentialing_Instance_Status__c</fullName>
        <label>Credentialing Instance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentialing_Status__c</fullName>
        <label>Credentialing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>Committee Complete</fullName>
                </value>
                <value>
                    <fullName>Recredentialing Discontinued</fullName>
                </value>
                <value>
                    <fullName>Initial Credentialing Discontinued</fullName>
                </value>
                <value>
                    <fullName>Revert to Original Re-Cred Due Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentialing_Type__c</fullName>
        <label>Credentialing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recredentialing</fullName>
                </value>
                <value>
                    <fullName>Initial Credentialing</fullName>
                </value>
                <value>
                    <fullName>GAP Initial Credentialing</fullName>
                </value>
                <value>
                    <fullName>GAP Recredentialing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_To_Process__c</fullName>
        <formula>Committee_Date__c -  Application_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dr_Member_Type__c</fullName>
        <label>Dr Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M - Member Doctor</fullName>
                </value>
                <value>
                    <fullName>S - School Faculty Doctor</fullName>
                </value>
                <value>
                    <fullName>F - Laser Vision Correction</fullName>
                </value>
                <value>
                    <fullName>A - Affiliate</fullName>
                </value>
                <value>
                    <fullName>X - Special (GAP) Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Joining_a_New_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joining a New Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Recred_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Recred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Credentialing_Instances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term_Reason__c</fullName>
        <label>Term Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Credentialing Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credentialing_Instance_Status__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Committee_Date__c</columns>
        <columns>Committee_Status__c</columns>
        <columns>Credentialing_Status__c</columns>
        <columns>Credentialing_Type__c</columns>
        <columns>Next_Recred_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Credentialing</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Credentialing_Type__c</columns>
        <columns>Credentialing_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credentialing_Instance_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Credentialing</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Credentialing Instance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentialing Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CommitteeStatus_and_CommitteeDate_Reqd</fullName>
        <active>true</active>
        <description>Committee Status &amp; Date Required when Credential Status = Committee</description>
        <errorConditionFormula>AND(
ISPICKVAL( Credentialing_Status__c, &quot;Committee&quot;),
OR(
ISPICKVAL( Committee_Status__c, &quot;&quot; ),
ISBLANK( Committee_Date__c ))
)</errorConditionFormula>
        <errorMessage>Committee Date and Committee Status must be complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CredentialStatus_and_CommitteeDate_Reqd</fullName>
        <active>true</active>
        <description>Credential Status &amp; Committee Date Required when Committee Status = Recommend Denial</description>
        <errorConditionFormula>AND(
ISPICKVAL( Committee_Status__c, &quot;Recommend Denial&quot;),
OR(
ISPICKVAL( Credentialing_Status__c, &quot;&quot; ),
ISBLANK( Committee_Date__c ))
)</errorConditionFormula>
        <errorMessage>Credentialing Status and Committee Date must be complete.</errorMessage>
    </validationRules>
</CustomObject>